fixed some layout shift on load. changed styles on projects page

--- a/app/components/ProjectCard/projectCard.module.scss
+++ b/app/components/ProjectCard/projectCard.module.scss
@@ -86,7 +86,7 @@
     
     &::after {
         content:'';
-        width:100%;
+        width:110%;
         height:150px;
         background-image: linear-gradient(140deg, var(--surfaceVariant), var(--surfaceVariantOffset));
         box-shadow:inset 0 0 20px 20px var(--background);
